Update pkg json & add geojson for individual collections
